# pytest-pylyzer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.toml
.github/workflows/: check.yaml  check.yml  release.yml
src/pytest_pylyzer/: __init__.py  exceptions.py  plugin.py  run.py
tests/: test_pylyzer.py
